--- a/Thesis.tex
+++ b/Thesis.tex
@@ -98,6 +98,7 @@
 \include{Appendix1}                                 %Appendix A
 \include{ArticleContent}							%Appendix containing article text
 \include{DatadiagramsAppendix}						%Appendix containing diagrams about the dataflow
+\include{EvaluationAppendix}						%Appendix containing digrams used in the evaluation
 %-----------
 % Backmatter
 %-----------
